# baiji

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  bark_tts.ipynb  kokoro_tts.ipynb  kokoro_tts.py  main.py  muyan_tts_test.ipynb  pyproject.toml  vits_tts.ipynb
.cursor/rules/: plan.mdc
docs/: development.md
examples/: alice_in_wonderland.txt
src/baiji/: __init__.py  __main__.py  args.py  check_ffmpeg.py  convert_chapters.py  cover_image.py  epub.py  output_path.py  read.py  save_txt.py  transform_text.py
src/ebook_to_audiobook/: __main__.py  args.py  convert_chapters.py  cover_image.py  epub.py  epub_metadata.py  join_wav.py  mp3_tags.py  progress.py
tests/: __init__.py  test_read.py
