[project]
name = "txt-to-speech"
version = "0.1.0"
description = "Text-to-speech experiments with Bark and VITS"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "transformers",
    "soundfile",
    "numpy",
    "ipython",
    "jupyter",
    "notebook",
    "ipykernel",
    "pydub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.md"]

