[project]
name = "txt-to-speech"
version = "0.1.0"
description = "Text-to-speech experiments with Bark and VITS"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch",
    "transformers",
    "soundfile",
    "numpy",
    "ipython",
    "jupyter",
    "notebook",
    "ipykernel",
    "pydub",
    "kokoro>=0.9.4",
    "pip>=25.1.1",
    "ebooklib>=0.19",
    "bs4>=0.0.2",
    "tqdm",
    "mutagen>=1.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.md"]
