[project]
name = "baiji"
version = "0.1.0"
description = "Python program that converts an ebook text to an audiobook"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch",
    "transformers",
    "soundfile",
    "pydub",
    "kokoro>=0.9.4",
    "ebooklib>=0.19",
    "bs4>=0.0.2",
    "tqdm",
    "pip>=25.1.1",
    "mutagen>=1.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.md"]
